--- a/DDDExample.Application/DDDExample.Application.csproj
+++ b/DDDExample.Application/DDDExample.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DDDExample.Domain\DDDExample.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
