feat(ui) Add ui classes

--- a/DDDExample.Api/appsettings.json
+++ b/DDDExample.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DemoCuentasConnection": "Data Source=localhost; Initial Catalog=DemoCuentasDB; user id=sa; password=Passw0rd123456; TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
