--- a/DDDExample.Api/DDDExample.Api.csproj
+++ b/DDDExample.Api/DDDExample.Api.csproj
@@ -8,7 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.17">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DDDExample.Application\DDDExample.Application.csproj" />
+    <ProjectReference Include="..\DDDExample.Infrastructure\DDDExample.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
